--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -3,19 +3,24 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="541.0" prefWidth="559.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="600.0" prefWidth="559.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="372.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
@@ -33,34 +38,70 @@
           </Menu>
         </menus>
       </MenuBar>
-      <Label layoutX="20.0" layoutY="114.0" text="Add record:" />
-      <ChoiceBox fx:id="recordTypeSelect" layoutX="73.0" layoutY="157.0" prefHeight="25.0" prefWidth="147.0" />
-      <Label layoutX="22.0" layoutY="161.0" text="Type:" />
-      <Label layoutX="22.0" layoutY="201.0" text="Time:" />
-      <TextField fx:id="recordTimeField" layoutX="172.0" layoutY="197.0" prefHeight="25.0" prefWidth="48.0" />
-      <Button layoutX="179.0" layoutY="289.0" mnemonicParsing="false" onAction="#addAction" prefHeight="25.0" prefWidth="41.0" text="Add" />
-      <TableView fx:id="recordTable" layoutY="332.0" prefHeight="209.0" prefWidth="559.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="332.0">
+      <Label layoutX="14.0" layoutY="152.0" text="Add record:">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <ChoiceBox fx:id="recordTypeSelect" layoutX="71.0" layoutY="195.0" prefHeight="25.0" prefWidth="92.0" />
+      <Label layoutX="20.0" layoutY="199.0" text="Type:" />
+      <Label layoutX="20.0" layoutY="239.0" text="Time:" />
+      <TextField fx:id="recordTimeField" layoutX="170.0" layoutY="235.0" prefHeight="25.0" prefWidth="48.0" />
+      <Button layoutX="177.0" layoutY="327.0" mnemonicParsing="false" onAction="#addAction" prefHeight="25.0" prefWidth="41.0" text="Add" />
+      <TableView fx:id="recordTable" layoutY="368.0" prefHeight="232.0" prefWidth="567.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="368.0">
         <columns>
           <TableColumn fx:id="dateCol" prefWidth="75.0" text="Date" />
-          <TableColumn fx:id="typeCol" prefWidth="75.0" text="Type" />
-            <TableColumn fx:id="timeCol" prefWidth="75.0" text="Time" />
-            <TableColumn fx:id="noteCol" prefWidth="333.0" text="Note" />
+          <TableColumn fx:id="categoryCol" prefWidth="75.0" text="Category" />
+            <TableColumn fx:id="categoryTypeCol" prefWidth="67.0" text="Type" />
+            <TableColumn fx:id="timeCol" prefWidth="66.0" text="Time" />
+            <TableColumn fx:id="noteCol" prefWidth="275.0" text="Note" />
         </columns>
       </TableView>
-      <Label layoutX="24.0" layoutY="65.0" text="Today goal:" />
-      <Button layoutX="179.0" layoutY="61.0" mnemonicParsing="false" onAction="#lockAction" text="Lock" />
-      <LineChart fx:id="recordMainChart" layoutX="234.0" layoutY="25.0" prefHeight="307.0" prefWidth="335.0" AnchorPane.leftAnchor="224.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </LineChart>
-      <TextField fx:id="goalField" layoutX="114.0" layoutY="61.0" prefHeight="25.0" prefWidth="48.0" />
-      <Label layoutX="22.0" layoutY="237.0" text="Note:" />
-      <TextArea fx:id="recordNoteArea" layoutX="73.0" layoutY="237.0" prefHeight="45.0" prefWidth="147.0" />
-      <Button layoutX="114.0" layoutY="289.0" mnemonicParsing="false" onAction="#clearAction" prefHeight="25.0" prefWidth="48.0" text="Clear" />
-      <Label fx:id="errorLabel" layoutX="92.0" layoutY="114.0" prefHeight="17.0" prefWidth="127.0" />
+      <Label layoutX="19.0" layoutY="114.0" text="Today goal:" />
+      <Button layoutX="174.0" layoutY="110.0" mnemonicParsing="false" onAction="#lockAction" text="Lock" />
+      <TextField fx:id="goalField" layoutX="109.0" layoutY="110.0" prefHeight="25.0" prefWidth="48.0" />
+      <Label layoutX="20.0" layoutY="275.0" text="Note:" />
+      <TextArea fx:id="recordNoteArea" layoutX="71.0" layoutY="275.0" prefHeight="45.0" prefWidth="147.0" />
+      <Button layoutX="112.0" layoutY="327.0" mnemonicParsing="false" onAction="#clearAction" prefHeight="25.0" prefWidth="48.0" text="Clear" />
+      <Label fx:id="errorLabel" alignment="TOP_CENTER" layoutX="35.0" layoutY="43.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="17.0" prefWidth="178.0" text="Have a nice day!" textOverrun="CLIP">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <Button fx:id="editType" layoutX="177.0" layoutY="195.0" mnemonicParsing="false" onAction="#editTypeAction" prefHeight="25.0" prefWidth="41.0" text="Edit" />
+      <TabPane layoutX="232.0" layoutY="23.0" prefHeight="307.0" prefWidth="335.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab fx:id="categoryTab" text="Category distribution">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <PieChart fx:id="categoryChart" layoutX="13.0" layoutY="-2.0" prefHeight="282.0" prefWidth="310.0" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab fx:id="timeTab" text="Time spend">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="420.0" prefWidth="336.0">
+                     <children>
+                        <LineChart fx:id="timeChart" layoutX="-2.0" prefHeight="278.0" prefWidth="341.0" AnchorPane.leftAnchor="-2.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="0.0">
+                          <xAxis>
+                            <CategoryAxis side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis side="LEFT" />
+                          </yAxis>
+                        </LineChart>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
+      <Label layoutX="14.0" layoutY="72.0" text="Plan:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <DatePicker fx:id="fromDate" layoutX="239.0" layoutY="328.0" prefHeight="25.0" prefWidth="147.0" promptText="From" />
+      <DatePicker fx:id="toDate" layoutX="400.0" layoutY="328.0" prefHeight="25.0" prefWidth="147.0" promptText="To" />
    </children>
 </AnchorPane>
